# src/routes/addons.ts
@@ -13,17 +13,20 @@ export const bearerMiddleware = auth.getBearerMiddleware();
 
 // get a list of addons
 Router.get('/cli/addons', bearerMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['CLI']
     let addonslist = await req.app.locals.addons.getAddonsList();
     res.send(addonslist)
 });
 
 // get a list of addons
 Router.get('/addons', authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Addons']
     let addonslist = await req.app.locals.addons.getAddonsList();
     res.send(addonslist)
 });
 
 Router.get('/addons/operators', authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Addons']
     let operatorslist = await req.app.locals.addons.getOperatorsList();
     res.send(operatorslist)
 });
