# src/routes/auth.ts
@@ -7,6 +7,7 @@ auth.init();
 export const authMiddleware = auth.getAuthMiddleware();
 
 Router.all("/session", (req: Request, res: Response) => {
+    // #swagger.tags = ['Auth']
 
     let status = 200
     let isAuthenticated = false
@@ -26,9 +27,11 @@ Router.all("/session", (req: Request, res: Response) => {
 })
 
 Router.get('/auth/github',
+// #swagger.tags = ['Auth']
   auth.passport.authenticate('github', { scope: [ 'user:email' ] }));
 
 Router.get('/auth/github/callback',
+  // #swagger.tags = ['Auth']
   auth.passport.authenticate('github', { failureRedirect: '/login' }),
   function(req, res) {
     // Successful authentication, redirect home.
@@ -36,9 +39,11 @@ Router.get('/auth/github/callback',
   });
 
 Router.get('/auth/oauth2',
+// #swagger.tags = ['Auth']
   auth.passport.authenticate('oauth2', { scope: [ 'user:email' ] }));
 
 Router.get('/auth/oauth2/callback',
+  // #swagger.tags = ['Auth']
   auth.passport.authenticate('oauth2', { failureRedirect: '/login' }),
   function(req, res) {
     // Successful authentication, redirect home.
@@ -47,11 +52,13 @@ Router.get('/auth/oauth2/callback',
 
 // Send auth methods to display in the login page
 Router.get('/auth/methods', function (req: Request, res: Response, next: NextFunction) {
+    // #swagger.tags = ['Auth']
     res.send(auth.authmethods);
 })
 
 // Login user
 Router.post('/login', function(req: Request, res: Response, next: NextFunction) {
+    // #swagger.tags = ['Auth']
     auth.passport.authenticate("local", function (err: Error, user: Express.User, info: string) {
         if (err) {
             return next(err);
@@ -71,6 +78,7 @@ Router.post('/login', function(req: Request, res: Response, next: NextFunction) 
 
 // Logout user
 Router.get('/logout', authMiddleware, function (req: Request, res: Response, next: NextFunction) {
+    // #swagger.tags = ['Auth']
     req.logout({}, function (err: Error) {
         if (err) {
             return next(err);
