# src/routes/config.ts
@@ -13,6 +13,7 @@ import debug from 'debug';
 debug('app:routes')
 
 Router.get('/config', authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Config']
     let debug: any = {};
     debug['pipelineState'] = req.app.locals.kubero.getPipelineStateList();
     debug['appStateList'] = await req.app.locals.kubero.getAppStateList();
@@ -20,36 +21,44 @@ Router.get('/config', authMiddleware, async function (req: Request, res: Respons
 });
 
 Router.get('/cli/config/podsize', bearerMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['CLI']
     res.send(await req.app.locals.kubero.getPodSizeList());
 });
 
 Router.get('/config/podsize', authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Config']
     res.send(await req.app.locals.kubero.getPodSizeList());
 });
 
 
 Router.get('/cli/config/buildpacks', bearerMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['CLI']
     res.send(await req.app.locals.kubero.getBuildpacks());
 });
 
 Router.get('/config/buildpacks', authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Config']
     res.send(await req.app.locals.kubero.getBuildpacks());
 });
 
 
 Router.get('/cli/config/k8s/context', bearerMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['CLI']
     res.send(req.app.locals.kubero.getContexts());
 });
 
 Router.get('/config/k8s/context', authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Config']
     res.send(req.app.locals.kubero.getContexts());
 });
 
 
 Router.get('/cli/config/repositories', bearerMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['CLI']
     res.send(await req.app.locals.kubero.getRepositories());
 });
 
 Router.get('/config/repositories', authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Config']
     res.send(await req.app.locals.kubero.getRepositories());
 });
