# src/routes/pipelines.ts
@@ -12,6 +12,7 @@ export const authMiddleware = auth.getAuthMiddleware();
 export const bearerMiddleware = auth.getBearerMiddleware();
 
 Router.post('/cli/pipelines',bearerMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['CLI']
     let con = await req.app.locals.kubero.connectRepo(
         req.body.git.repository.provider.toLowerCase(),
         req.body.git.repository.ssh_url);
@@ -40,6 +41,7 @@ Router.post('/cli/pipelines',bearerMiddleware, async function (req: Request, res
 
 // create a pipeline
 Router.post('/pipelines',authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Pipeline']
     let pipeline: IPipeline = {
         name: req.body.pipelineName,
         domain: req.body.domain,
@@ -56,12 +58,14 @@ Router.post('/pipelines',authMiddleware, async function (req: Request, res: Resp
 
 // get a list of pipelines
 Router.get('/cli/pipelines', bearerMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['CLI']
     let pipelines = await req.app.locals.kubero.listPipelines();
     res.send(pipelines);
 });
 
 // get a list of pipelines
 Router.get('/pipelines', authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Pipeline']
     let pipelines = await req.app.locals.kubero.listPipelines()
     .catch((err: any) => {
         console.log(err)
@@ -71,18 +75,21 @@ Router.get('/pipelines', authMiddleware, async function (req: Request, res: Resp
 
 // get a pipeline
 Router.get('/cli/pipelines/:pipeline', bearerMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['CLI']
     let pipeline = await req.app.locals.kubero.getPipeline(req.params.pipeline);
     res.send(pipeline);
 });
 
 // get a pipeline
 Router.get('/pipelines/:pipeline', authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Pipeline']
     let pipeline = await req.app.locals.kubero.getPipeline(req.params.pipeline);
     res.send(pipeline);
 });
 
 // delete a pipeline
 Router.delete('/pipelines/:pipeline', authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Pipeline']
     await req.app.locals.kubero.deletePipeline(encodeURI(req.params.pipeline));
     res.send("pipeline "+encodeURI(req.params.pipeline)+" deleted");
 });
@@ -90,24 +97,28 @@ Router.delete('/pipelines/:pipeline', authMiddleware, async function (req: Reque
 
 // delete a pipeline
 Router.delete('/cli/pipelines/:pipeline', bearerMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['CLI']
     await req.app.locals.kubero.deletePipeline(encodeURI(req.params.pipeline));
     res.send("pipeline "+encodeURI(req.params.pipeline)+" deleted");
 });
 
 // delete an app
 Router.delete('/pipelines/:pipeline/:phase/:app', authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Pipeline']
     await req.app.locals.kubero.deleteApp(req.params.pipeline, req.params.phase, req.params.app);
     res.send("deleted");
 });
 
 // delete an app
 Router.delete('/cli/pipelines/:pipeline/:phase/:app', bearerMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['CLI']
     await req.app.locals.kubero.deleteApp(req.params.pipeline, req.params.phase, req.params.app);
     res.send("deleted "+req.params.pipeline+" "+req.params.phase+" "+req.params.app);
 });
 
 // update a app in a specific pipeline
 Router.put('/pipelines/:pipeline/:phase/:app', authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Pipeline']
 
     let appconfig: IApp = {
         name: req.params.app,
@@ -167,30 +178,35 @@ Router.put('/pipelines/:pipeline/:phase/:app', authMiddleware, async function (r
 
 // get app details
 Router.get('/cli/pipelines/:pipeline/:phase/:app', bearerMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['CLI']
     let app = await req.app.locals.kubero.getApp(req.params.pipeline, req.params.phase, req.params.app);
     res.send(app.body);
 });
 
 // get app details
 Router.get('/pipelines/:pipeline/:phase/:app', authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Pipeline']
     let app = await req.app.locals.kubero.getApp(req.params.pipeline, req.params.phase, req.params.app);
     res.send(app.body);
 });
 
 // get all apps in a pipeline
 Router.get('/cli/pipelines/:pipeline/apps', bearerMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['CLI']
     let apps = await req.app.locals.kubero.getPipelineWithApps(req.params.pipeline);
     res.send(apps);
 });
 
 // get all apps in a pipeline
 Router.get('/pipelines/:pipeline/apps', authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Pipeline']
     let apps = await req.app.locals.kubero.getPipelineWithApps(req.params.pipeline);
     res.send(apps);
 });
 
 //restart app
 Router.get('/pipelines/:pipeline/:phase/:app/restart', authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Pipeline']
     req.app.locals.kubero.restartApp(req.params.pipeline, req.params.phase, req.params.app);
     res.send("restarted");
 });
