# src/routes/settings.ts
@@ -11,12 +11,14 @@ export const bearerMiddleware = auth.getBearerMiddleware();
 
 // get the settings
 Router.get('/cli/settings', bearerMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['CLI']
     let addonslist = await req.app.locals.settings.getSettings();
     res.send(addonslist)
 });
 
 // get the settings
 Router.get('/settings', authMiddleware, async function (req: Request, res: Response) {
+    // #swagger.tags = ['Settings']
     let addonslist = await req.app.locals.settings.getSettings();
     res.send(addonslist)
 });
